--- a/README.adoc
+++ b/README.adoc
@@ -195,9 +195,9 @@ There's a few dependencies which have some files copied into the `lua/aniseed` d
  * `aniseed.view` - the view function from https://fennel-lang.org/[Fennel], I'd recommend accessing it through `aniseed.core` and the `pr` or `pr-str` functions though.
  * `aniseed.nvim` - https://github.com/norcalli/nvim.lua[nvim.lua] is a collection of extremely helpful mappings to `vim.api.*`, I find it a lot easier to read than vanilla API access.
 
-== Testing
+=== Testing
 
-Aniseed provides testing tools under `aniseed.test`, you can see how Aniseed executes it's own test suite (in CirclCI upon git push) in the `Makefile` under the `test` command. Check out the files in `+test/fnl/aniseed+` for further real world examples of Aniseed based testing.
+Aniseed provides testing tools under `aniseed.test`, you can see how Aniseed executes it's own test suite (in https://circleci.com/gh/Olical/aniseed[CircleCI] upon git push) in the `Makefile` under the `test` command. Check out the files in `+test/fnl/aniseed+` for further real world examples of Aniseed based testing.
 
 The core of Aniseed's own suite is `test/fnl/aniseed/test-suite.fnl`.
 
@@ -225,7 +225,7 @@ The core of Aniseed's own suite is `test/fnl/aniseed/test-suite.fnl`.
 
 It's ensuring all output is captured in a file, loading all of the test modules and then executing them with `+(test.run-all)+` (you can use `+(test.run :my.module)+` to run the tests for a specific module).
 
-Your tests don't need to be in a specific directory like mine, they simply need to be in your module definition table under the `+:aniseed/tests+` key. Here's Aniseed's string test functions as an example. These could just as easily be in the `+aniseed.string+` module itself but I want to keep them out of the plugin's compiled output for your sake.
+Your tests don't need to be in a specific directory like mine, they simply need to be in your module definition table under the `+:aniseed/tests+` key. Here's the tests for `+aniseed.string+` as an example. These could just as easily be in the `+aniseed.string+` module itself but I want to keep them out of the project's compiled output for your sake.
 
 [source,clojure]
 ----
@@ -239,13 +239,30 @@ Your tests don't need to be in a specific directory like mine, they simply need 
     (t.= "foobarbaz" (str.join ["foo" "bar" "baz"])))}}
 ----
 
-So your tests are named by keys in the `+aniseed/tests+` table, your test functions are called with a `t` table that contains the following assertion functions.
+So your tests are named by keys in the `+:aniseed/tests+` table, your test functions are called with a `t` table that contains the following assertion functions.
 
  * `t.ok?` checks if the result you give it is truthy.
  * `t.=` checks if the _expected_ and _actual_ (in that order) values are the same.
  * `t.pr=` is the same as `t.=` but will run the values through `core.pr-str`, this is handy for comparing tables.
 
 All of these functions take an optional last argument that acts as a description on failure.
+
+[source,clojure]
+----
+(t.= "foo" "bar" "ideally, these strings should be the same")
+;; Yields: [my.module/some-test] Expected '"foo"' but received '"bar"' (ideally, these strings should be the same) 
+----
+
+The test runner functions (`test.run` and `test.run-all`) return a table of results that you can use as you see fit. `+(test.ok? some-results)+` will let you know if you can consider the tests as a success or not.
+
+[source,clojure]
+----
+;; An example result where one assertion failed.
+{:tests 5
+ :tests-passed 4
+ :assertions 10
+ :assertions-passed 9}
+----
 
 == Development
 
